--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -9,4 +9,11 @@
     background: rgba(0, 130, 29, 0.7);
     color: white;
   }
+
+  .alert.alert-danger {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
 }
