--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,15 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if @product == nil %>
+  <div class="alert alert-danger" role="alert">
+  <span> Unfortunately, Your Cart Is Currently Empty </span>
+  <button type="button" class="btn btn-outline-success">
+  <%= link_to 'Home', "/" %>
+  </button>
+</div>
+</button>
+  <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +56,6 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
 </section>
