--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,14 +3,13 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-  <% if @product == nil %>
+  <% if enhanced_cart.empty? %>
   <div class="alert alert-danger" role="alert">
   <span> Unfortunately, Your Cart Is Currently Empty </span>
   <button type="button" class="btn btn-outline-success">
   <%= link_to 'Home', "/" %>
   </button>
 </div>
-</button>
   <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
