add style for the sold out button to always be red

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,11 @@ form.button_to {
     font-size: 1.4em;
   }
 }
-
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545 !important;
+  border-color: #dc3545;
+}
 .sticky-nav {
   background: green;
   position: sticky;
