update the show for the dashboard file to include the categories selection

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -12,7 +12,7 @@
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><a href="admin/products">Total Products: <%= @products_count %></li>
-    <li class="list-group-item"><a href="/">Total Categories: <%= @category_count %></li>
+    <li class="list-group-item"><a href="admin/categories">Total Categories: <%= @category_count %></li>
   </ul>
 </div>
 </section>
