--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,48 +1,46 @@
 <section class="cart-show">
-
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
   <% if enhanced_cart.empty? %>
-  <div class="alert alert-danger" role="alert">
-  <span> Unfortunately, Your Cart Is Currently Empty </span>
-  <button type="button" class="btn btn-outline-success">
-  <%= link_to 'Home', "/" %>
-  </button>
-</div>
+    <div class="alert alert-danger" role="alert">
+      <span> Unfortunately, Your Cart Is Currently Empty </span>
+      <button type="button" class="btn btn-outline-success">
+        <%= link_to 'Home', "/" %>
+      </button>
+    </div>
   <% else %>
-  <div class="panel panel-default items">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th colspan="2">Product</th>
-          <th>Unit Price</th>
-          <th>Quantity</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% enhanced_cart.each do |item| %>
-          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-        <% end %>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="4">
-            TOTAL:
-          </th>
-          <th>
-            <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
-          </th>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <%= form_tag orders_path do %>
-        <script
+    <div class="panel panel-default items">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th colspan="2">Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% enhanced_cart.each do |item| %>
+            <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="4">
+              TOTAL:
+            </th>
+            <th>
+              <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <%= form_tag orders_path do %>
+          <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= cart_subtotal_cents %>"
@@ -50,11 +48,9 @@
           data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
           data-email="kvirani@gmail.com"
-          data-currency="cad">
-        </script>
-      <% end %>
+          data-currency="cad"></script>
+        <% end %>
+      </div>
     </div>
-  </div>
   <% end %>
-
 </section>
